<resources>
    <string name="app_name">Malaga Parking</string>
    <string name="malaga_parking">Málaga Parking</string>
    <string name="grafico">Graphic</string>
    <string name="maps">Maps</string>
    <string name="load">Update</string>
    <string name="desc_foto_portada">Nocturne Málaga\'s photo.</string>
    <string name="near">Near</string>
    <string name="no_data">No data</string>
    <string name="full">Full</string>
</resources>
